使用 Colaboratory 建立

--- a/hello_Colab.ipynb
+++ b/hello_Colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOVYz4oppEAIoW5SHK1qY+X",
+      "authorship_tag": "ABX9TyNgBvNAVlNIYBKoS2lF3anm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,8 @@
         }
       ],
       "source": [
-        "print('Hello Colab')"
+        "print('Hello Colab')\n",
+        "print('hellow')"
       ]
     }
   ]
