使用 Colaboratory 建立

--- a/hello_Colab.ipynb
+++ b/hello_Colab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNgBvNAVlNIYBKoS2lF3anm",
+      "authorship_tag": "ABX9TyNE4zEeoZiyb/lBo5Krtqwf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       ],
       "source": [
         "print('Hello Colab')\n",
-        "print('hellow')"
+        "print('hello')"
       ]
     }
   ]
